# vn_manager

./: Cargo.toml  README.org
.github/workflows/: push.yaml  release.yaml
src/: app.rs  contents.rs  main.rs  message.rs  update.rs
src/logic/: error.rs  file.rs  mod.rs  path.rs  play.rs  util.rs  vn.rs
src/style/: dark.rs  mod.rs
src/ui/: content.rs  header.rs  mod.rs
src/ui/add_vn/: mod.rs  view.rs
src/ui/vn/: content.rs  list.rs  mod.rs  view.rs
