[package]
name = "vn_manager"
version = "0.1.0"
authors = ["forlos <forlos@disroot.org>"]
edition = "2018"

[dependencies]
iced = { version = "0.1.1", default_features = false, features = ["image"] }
strum = "0.18.0"
strum_macros = "0.18.0"
vndb_rs = { git = "https://github.com/Forlos/vndb_rs", branch = "master" }
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0.106", default_features = false, features = ["derive"] }
serde_json = "1.0"
dirs = "2.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
